1. UI - import queries 2. Fixed queries API to use new v2 auth mechanism 3. Fixed query module initialization that got broken during cleanup process 4. Implemented new cross browser compatible file upload directive and got rid of existing directive based on HTML5 FormData API (doesn't work well on IE 10)

--- a/www/app/styles/app.css
+++ b/www/app/styles/app.css
@@ -600,24 +600,6 @@ h4.os-sub-section-title, h5.os-sub-section-title, h6.os-sub-section-title {
   text-align: right;
 }
 
-.os-file-upload {
-  position: relative;
-  overflow: hidden;
-  width: 100%;
-  text-align: left;
-  color: #999;
-}
-
-.os-file-upload > input[type=file] {
-  position: absolute;
-  top: 0;
-  right: 0;
-  margin: 0;
-  opacity: 0;
-  cursor: pointer;
-  padding: 20px;
-}
-
 .os-input-addon-grp {
   position: relative;
 }
